<?xml version='1.0' encoding='utf-8'?>
<resources>
    <string name="app_name">集创思学生端</string>
    <string name="launcher_name">@string/app_name</string>
    <string name="activity_name">@string/launcher_name</string>
    <string name="right">提交</string>
    <string name="clear">橡皮擦</string>
    <string name="clear_all">清除</string>
    <string name="undo">撤销</string>
    <string name="redo">反撤销</string>
    <string name="cancel">退出</string>
    <string name="black">黑色</string>
    <string name="red">红色</string>
    <string name="closebtn">×</string>
    <string name="OKbtn">退出</string>
    <string name="title">题目详情</string>
</resources>
