<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shadow_shape"
        android:padding="10dp">

        <ImageView
            android:id="@+id/iv_color_black"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:clickable="true"
            android:contentDescription="@string/black"
            android:focusable="true"
            android:scaleType="fitCenter"
            android:src="@drawable/select_black_pan"/>

        <ImageView
            android:id="@+id/iv_color_red"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignBaseline="@id/iv_color_black"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:layout_toEndOf="@id/iv_color_black"
            android:clickable="true"
            android:contentDescription="@string/red"
            android:focusable="true"
            android:scaleType="fitCenter"
            android:src="@drawable/default_red_pan"/>

        <View
            android:layout_width="1dp"
            android:layout_height="30dp"
            android:layout_alignBaseline="@id/iv_color_red"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/iv_color_red"
            android:background="@color/shadow"/>

        <ImageView
            android:id="@+id/iv_main_undo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignBaseline="@id/iv_color_red"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_toEndOf="@id/iv_color_red"
            android:clickable="false"
            android:contentDescription="@string/undo"
            android:focusable="true"
            android:scaleType="fitCenter"
            android:src="@drawable/undo_default"/>

        <ImageView
            android:id="@+id/iv_main_redo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignBaseline="@id/iv_main_undo"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:layout_toEndOf="@id/iv_main_undo"
            android:clickable="false"
            android:contentDescription="@string/redo"
            android:focusable="true"
            android:scaleType="fitCenter"
            android:src="@drawable/redo_default"/>

        <View
            android:layout_width="1dp"
            android:layout_height="30dp"
            android:layout_alignBaseline="@id/iv_main_redo"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/iv_main_redo"
            android:background="@color/shadow"/>

        <ImageView
            android:id="@+id/iv_main_clear"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignBaseline="@id/iv_main_redo"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/iv_main_redo"
            android:clickable="true"
            android:contentDescription="@string/clear"
            android:focusable="true"
            android:scaleType="fitCenter"
            android:src="@drawable/eraser"/>

        <ImageView
            android:id="@+id/iv_main_clear_all"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignBaseline="@id/iv_main_clear"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/iv_main_clear"
            android:clickable="true"
            android:contentDescription="@string/clear_all"
            android:focusable="true"
            android:scaleType="fitCenter"
            android:src="@drawable/clear"/>

        <Button
            android:id="@+id/btn_main_cancel"
            android:layout_width="64dp"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/cancle"
            android:text="@string/cancel"
            android:textColor="@android:color/white"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/iv_main_right"
            android:layout_width="64dp"
            android:layout_height="30dp"
            android:layout_alignBaseline="@id/btn_main_cancel"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/btn_main_cancel"
            android:background="@drawable/right"
            android:text="@string/right"
            android:textColor="@android:color/white"
            android:textSize="18sp"/>
    </RelativeLayout>

    <com.example.tangdao.gcharms1.freedrawview.FreeDrawView
        android:id="@+id/drawing_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        app:paintAlpha="255"
        app:paintColor="@android:color/black"
        app:paintWidth="1dp"
        app:resizeBehaviour="crop"/>
</LinearLayout>